# quadruped_gym

./: .gitignore
go2_sim2sim/: sim2mujoco.py  sim2mujoco_stairs.py  sim2mujoco_trot.py
go2_sr/policy/go2/stairs/: config.yaml  policy_1.pt
go2_sr/policy/go2/trot/: config.yaml  policy_1.pt
go2_sr/policy/go2/walk_these_ways/: config.yaml  policy_1.pt
go2_sr/src/go2_sr/: CMakeLists.txt  package.xml
go2_sr/src/go2_sr/include/: fsm_go2.hpp  rl_sim.hpp
go2_sr/src/go2_sr/launch/: gazebo.launch
go2_sr/src/go2_sr/src/: rl_sim.cpp
legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/envs/base/: legged_robot_config.py
legged_gym/legged_gym/envs/go2/: README_go2_allterrain.md  README_go2_trot.md  go2_allterrain_config.py  go2_allterrain_env.py  go2_stairs_config.py  go2_stairs_env.py  go2_trot_config.py  go2_trot_env.py
legged_gym/legged_gym/scripts/: play.py
